# jsk_demos

./: .gitignore
detect_cans_in_fridge_201202/: package.xml  pr2.machine
detect_cans_in_fridge_201202/config/: object_bayes.yaml  reference_histograms.yaml
detect_cans_in_fridge_201202/euslisp/: main.l  pddl-action.l
detect_cans_in_fridge_201202/launch/: aggregator.launch  bayes.launch  class_vis.launch  color_histogram.launch  color_histogram_tabletop.launch  perception.launch  ssd.launch  tabletop.launch
detect_cans_in_fridge_201202/scripts/: color_histogram_classifier.py  rect_array_to_bbox.py  volume_classifier.py
elevator_move_base_pr2/: CMakeLists.txt
elevator_move_base_pr2/launch/: elevator_move_base_eng2.launch  elevator_move_base_modules.xml
elevator_move_base_pr2/msg/: MatchedTemplates.msg
jsk_2017_01_pr2_longterm/: CMakeLists.txt  package.xml
jsk_2017_10_semi/: CMakeLists.txt
jsk_2017_home_butler/: CMakeLists.txt  README.md  package.xml  pr2.machine  setup.py
jsk_2017_home_butler/action/: Deliver.action  FindObject.action  FindPerson.action  Go.action  GoTo.action  ListenCommand.action  Pick.action  Place.action  PlaceObject.action  RunTask.action  Speak.action
jsk_2017_home_butler/cfg/: VolumeClassifier.cfg
jsk_2017_home_butler/data/: Locations.xml  Names.xml  Objects.xml  Questions.xml  UnknownObjects.xml  action_definition.yaml  annotations.yaml  annotators.yaml  command_easy.yaml  graph.yaml  phonemes.model  phonemes.txt
jsk_2017_home_butler/euslisp/: deliver.l  find_object.l  find_person.l  findobj.l  findppl.l  go.l  goto.l  pick.l  place.l  speak.l
jsk_2017_home_butler/launch/: action.xml  actions.launch  aggregator.launch  app_manager.launch  demo.launch  grasp.launch  interaction.launch  relay_rgbd.launch  relay_rgbd.xml  speech.launch  ssd.launch  tabletop.launch  tabletop_learn.launch
jsk_2017_home_butler/msg/: Action.msg  Command.msg
jsk_2017_home_butler/scripts/: annotation_aggregator.py  annotation_logger.py  bayes_category_estimator.py  bayes_category_learner.py  bayes_test.py  color_histogram_classifier.py  command_parser.py  command_recognizer.py  graph.yaml  infer_network.py  learn_network.old.py  learn_network.py  people_tracker.py  register_face.sh  relay_rgbd.sh  run_task.py  volume_classifier.py
jsk_2017_home_butler/src/jsk_2017_home_butler/: action.py  action_loader.py  behavior_network.py  classifier.py  command_parser.py  detection_interface.py  interactive_behavior.py  interpolator.py  nl_inference.py  preprocessor.py  resource_loader.py  state_machine.py  task_launcher.py  unknown_object_database.py  utilities.py  utils.py
jsk_2017_home_butler/src/jsk_2017_home_butler/actions/: __init__.py  listen_command.py  recover.py  run_command.py  wait_for_command.py
jsk_2017_home_butler/srv/: ParseCommand.srv
jsk_demo_common/: CMakeLists.txt
jsk_maps/: package.xml
jsk_maps/src/: building-model.l  (+2 more)
jsk_pr2_plug/: CMakeLists.txt  package.xml
jsk_pr2_plugs/: CMakeLists.txt  package.xml
jsk_pr2_plugs/data/: outlet.pcd
jsk_pr2_plugs/euslisp/: charge.l  pick-plug.l  publish_pcd_pose.l  test-plane.l
jsk_pr2_plugs/launch/: #detect_outlet.launch#  detect_outlet.launch  detect_outlet_with_checkerboard.launch  detect_plug.launch  detect_plug_checkerboard.launch  icp2dtest.launch  icp_test.launch  perception.launch  tracking_test.launch
jsk_pr2_plugs/scripts/: extract_floor_plane.py
jsk_pr2_plugs/src/: extract_floor_plane.cpp
(+68 files in other folders)
